--- a/package.json
+++ b/package.json
@@ -9,26 +9,25 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
-    "expo": "^45.0.0",
-    "expo-barcode-scanner": "~10.2.2",
-    "expo-status-bar": "~1.0.4",
-    "expo-updates": "~0.13.1",
-    "expo-web-browser": "~9.2.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-45.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-unimodules": "^0.14.10",
-    "react-native-web": "~0.13.12",
+    "expo": "^49.0.0",
+    "expo-barcode-scanner": "~12.5.3",
+    "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.11",
+    "expo-web-browser": "~12.3.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.3",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6",
     "react-navigation": "^4.4.0",
     "react-navigation-stack": "^2.8.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "babel-preset-expo": "~9.1.0"
+    "@babel/core": "^7.20.0",
+    "babel-preset-expo": "^9.5.0"
   },
   "private": true
 }
